# repo-control

./: .gitignore  .repo.yaml.example  CHANGELOG.md  Cargo.toml  README.md  TODO.md  config.py  projects.yaml.example  repo.py  utils.py  yamlconfig.py
repo-python/: config.py  utils.py
repo-rust/: .gitignore  Cargo.toml
repo-rust/src/: error.rs  git.rs  main.rs
repo-rust/src/commands/: fetch.rs  mod.rs  status.rs
src/: cli.rs  config.rs  error.rs  git.rs  main.rs
src/commands/: init.rs  mod.rs  project.rs  server.rs  status.rs  update.rs
tests/: cli.rs
tests/common/: mod.rs
