[package]
name = "repo-control"
version = "0.2.0"
edition = "2024"
description = "A helper for managing multiple git repositories"
readme = "README.md"
homepage = "https://github.com/markussilvan/repo-control"
repository = "https://github.com/markussilvan/repo-control"
authors = ["Markus Silván"]
license = "MIT"
keywords = ["git", "repository", "repositories", "control"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "repo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
